--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.22
 
     - name: Build
-      run: go build -v ./...
+      run: cd algorithms/go && go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: cd algorithms/go && go test -v ./...
