--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
+# IDE files
 .idea
 .vscode
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
